[refactoring] 분변객체 변경 문제